--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body {
 
 .topnav {
     overflow: hidden;
-    background-image: url('../images/bg.jpg');
+    background-image: url('../images/bg1.jpg');
     position: relative;
 }
 
