--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Yaldevi:wght@200&display=swap');
 * {
     box-sizing: border-box;
-    color: white;
+    color: rgb(248, 252, 252);
 }
 
 body {
-    background-image: url('../images/m2.jpg')
+    background-image: url('../images/bg1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.7;
 }
 
 .topnav {
     overflow: hidden;
-    background-image: url('../images/bg1.jpg');
     position: relative;
 }
 
@@ -21,9 +23,10 @@ body {
 .topnav a {
     float: left;
     color: white;
-    padding: 14px 16px;
+    padding: 15px 18px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 28px;
+    font-weight: bold;
 }
 
 .topnav a:hover {
@@ -32,7 +35,6 @@ body {
 }
 
 .active {
-    background-color: #04AA6D;
     color: white;
 }
 
@@ -51,14 +53,14 @@ header {
     display: flex;
 }
 
-.column-logo {
-    flex: 50%;
-    height: 300px;
-}
-
 main h1 {
     text-align: center;
     font-size: 40px;
+}
+
+main p {
+    text-align: center;
+    font-size: 20px;
 }
 
 #logo>img {
